fixed view on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 7vw;
   font-weight: 600;
-  line-height: 20px;
+  line-height: 64px;
   margin-bottom: 40px;
 }
 
